src/test/deca/syntax/invalid/provided/DeclarationVariableIfElseIfElse.deca
//Description:
//  Déclaration d'une variable dans un if et un else atteints
//
//Résultat:
//  ok
{
if(true)
{
    int x;
}
else{
    int x;
}
x=3;
}
